# rda

./: LICENSE  NOTE  README.md  pyproject.toml  requirements.txt
src/rda/: rda.py
src/rda/aes/: aes.py
src/rda/cli/: basic.py  command.py  shorthands.py
src/rda/optimized/: expander.py  functions.py  hw.py  pearsonr.py  utils.py
src/rda/plot/: plot.py
src/rda/power/: cpa.py  model.py  power.py
src/rda/processing/: processing.py
src/rda/utils/: colors.py  utils.py
